civic_europe/assets/scss/components/_filters.scss
.idealist-controls {
    background-color: $ce-lighter-gray;
    border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;

    @media screen and (max-width: $screen-xs-max) {
        background-color: white;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
    }

    .export-btn {
        margin-bottom: $spacer;
    }
}

.idealist-filter {
    .filter-element {
        @media screen and (min-width: $screen-md) {
            margin: 0.5*$spacer 0.5*$spacer 0.5*$spacer 0;
        }
    }

    // only pull right on medium and large screens

    .right {
        @media screen and (min-width: $screen-md) {
            float: right;
        }
    }

    .filter-label {
        margin-bottom: 2px;
        font-size: $font-size-sm;
        font-weight: $demibold;
        text-transform: uppercase;
        color: $ce-middle-gray;
    }

    .filter-element {
        width: 100%;

        .dropdown-menu {
            min-width: 100%;
            height: auto;
            max-height: 300px;
            overflow-x: hidden;
        }
    }

    .filter-element .btn-filter {
        .drop-down-caret {
            margin-left: 0.5*$spacer;
            float: right;
            line-height: $font-size-lg;
        }

        width: 100%;
    }

    .filter-element .value-label {
        float: left;
        text-align: left;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;

        @media screen and (max-width: $screen-md-max) {
            width: 76px;
        }
    }

    .search-filter {
        width: 100%;
        position: relative;
        height: 33px;
        margin-bottom: 40px;
    }

    .filter-element .search-filter {
        border-radius: 5px;
        background-color: #fff;
        border: solid 1px $ce-light-gray-shadow;
        color: $gray-dark;

        .search-filter-btn {
            position: absolute;
            right: 0;
        }
    }

    .search-filter-input {
        border: none;
        height: 100%;
        line-height: 1.25*$spacer;
        border-radius: 5px;
        width: 100%;
        float: left;
    }

    .mobile-filter {
        margin-top: 1.25*$spacer;
        float: none;
        width: 100%;
        border-radius: 5px;
        border: solid 1px $ce-dark-gray;

        .btn-collapse {
            width: 100%;
            height: 2.5*$spacer;
            margin: 0;
            padding: 0.25*$spacer 0.75*$spacer;
            background-color: $gray-lighter;
            border: none;
            font-size: $font-size-lg;
        }

        .btn-label {
            float: left;
        }

        .btn-collapse .fa,
        .btn-collapse .fas,
        .btn-collapse .far {
            float: right;
            margin-top: 0.25*$spacer;
        }

        .number-of-filters {
            margin-left: 0.5*$spacer;
            padding: 0.25*$spacer 0.5*$spacer;
            border-radius: 50%;
            background-color: $ce-brand-red;
            font-size: $font-size-base;
            text-align: center;
        }

        .collapsed .fa,
        .collapsed .fas,
        .collapsed .far {
            transform: rotateZ(180deg);
        }

        .card-block {
            text-align: center;
            padding: $spacer 0;
        }

        label {
            float: left;
        }

        .filter-element {
            width: 90%;
            margin: 0.25*$spacer 0.25*$spacer;
        }

        .filter-element:nth-child(2n+3) .dropdown-menu {
            right: 0;
            left: auto;
        }
    }
}

.filter-list {
    padding-left: 0;
    margin-left: 0.25*$spacer;
    margin-right: 0.25*$spacer;
    list-style: none;
}

@media screen and (min-width: $screen-sm) {
    .filter-bar .filter-list {
        float: left;
    }

    .filter-bar .filter-list-sort {
        float: right;
    }
}

.filter-list-item {
    display: inline-block;

    a {
        color: $gray;
    }

    .selected {
        color: $brand-primary;
    }

    & + :before {
        content: '| ';
    }
}

.filter-ordering {
    padding-bottom: 2.5*$spacer;

    .filter-element {
        padding-top: 2.5*$spacer;
    }
}

